test: enhance document validation tests with additional cases and assertions